# zeroj

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.gradle  gradle.properties  settings.gradle
docs/: alternate-prover-backends.md  architecture-overview.md  beta-release-readiness.md  circuit-annotation-user-guide.md  circuit-dsl-user-guide.md  component-status-2026-07-03.md  getting-started.md  groth16-dev-guide.md  plan-graalwasm-witness-calculator.md  plonk-support.md  production-readiness-review-2026-07-02.md  pure-java-prover-guide.md  vision-v2.md  vision-v3.md  vision.md  zeroj-ceremony-review-2026-07-10.md  zk-trusted-setup-beginner-guide.md  zk-usecases.md
incubator/zeroj-verifier-halo2/halo2-rust/: Cargo.toml
incubator/zeroj-verifier-halo2/halo2-rust/src/: lib.rs
zeroj-api/: README.md  build.gradle
zeroj-backend-spi/: README.md  build.gradle
zeroj-bbs/: README.md  build.gradle
zeroj-bbs-wasm/: README.md  build.gradle
zeroj-bbs-wasm/rust/: Cargo.toml
zeroj-bbs-wasm/rust/src/: lib.rs
zeroj-bls12381/: README.md  build.gradle
zeroj-bls12381-wasm/: README.md  build.gradle
zeroj-blst/: BUILDING.md  README.md  build.gradle
zeroj-bom/: README.md  build.gradle
zeroj-bom-all/: README.md  build.gradle
zeroj-bom-core/: README.md  build.gradle
zeroj-cardano/: README.md  build.gradle
zeroj-ccl/: README.md  build.gradle
zeroj-ceremony/: build.gradle
zeroj-circuit-annotation-api/: README.md  build.gradle
zeroj-circuit-annotation-processor/: README.md  build.gradle
zeroj-circuit-dsl/: README.md  build.gradle
(+864 files in other folders)
