[package]
name = "zeroj-halo2"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeroj_halo2"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gentestvectors"
path = "src/bin/gentestvectors.rs"

[dependencies]
# zcash halo2 — IPA commitment scheme, Pasta curves (Pallas/Vesta)
# No trusted setup required — demonstrates Halo2's key advantage
halo2_proofs = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
base64 = "0.22"

# FFI
libc = "0.2"

# Random
rand = "0.8"
rand_core = "0.6"

[profile.release]
opt-level = 3
lto = true
